fix console text-overflow

--- a/style.css
+++ b/style.css
@@ -18,12 +18,6 @@ body{
   font-family: 'Oswald', sans-serif;
 }
 
-header{
-
-}
-
-
-
 /* TOP NAVBAR */
 .top-navbar{
   
@@ -187,8 +181,6 @@ main{
   }
 }
 
-
-
 /* ////////  EDITORS ///////// */
 #html-editor{
   grid-area: html;
@@ -220,6 +212,9 @@ iframe{
   font-size: 14px;
   word-spacing: 2px;
   letter-spacing: 1px;
+  overflow-x: auto;
+  min-width: 100%;
+  
 }
 
 .error{
@@ -228,7 +223,7 @@ iframe{
   gap: 4px;
   color: rgb(255, 105, 105);
   background: #4b0408;
-  width: 100%;
+  min-width: 100%;
   padding: 2px 0;
 }
 
@@ -238,12 +233,15 @@ iframe{
   gap: 4px;
   color: rgb(57, 211, 134);
   background: #044b10;
-  width: 100%;
+  min-width: 100%;
   padding: 2px 0;
+
 
 }
 
-
+.logsvg-span{
+ display: flex;
+}
 
 .icon-labels{
   margin-top: 10px;
@@ -252,7 +250,6 @@ iframe{
   border: 5px solid rgb(61, 61, 61);
   width: 100%;
   height: 100%;
-
  
 }
 
